@@ -1,5 +1,14 @@
 2007-10-22  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.glade
+	  src/wireless-security/ws-dynamic-wep.c
+	  src/wireless-security/ws-dynamic-wep.h
+	  src/wireless-security/Makefile.am
+	  src/wireless-dialog.c
+		- Add Dynamic WEP authentication option
+
+2007-10-22  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/ws-wpa-eap.c
 		- Use generic 802.1x methods from wireless-security.c
 
